[package]
name = "rust-gear-book_actix-web"
version = "0.1.0"
authors = ["yukihir0 <yukihiro.cotori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.1.0"
askama = "0.10.3"
thiserror = "1.0.21"
rusqlite ={version ="0.24", features=["bundled"]}
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
serde = {version="1.0", features = ["derive"]}